force-app/main/default/objects/BOR_Master_Checklist__c/fields/BOR_Checklist_Name__c.field-meta.xml
<CustomField>
    <fullName>BOR_Checklist_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>BOR Checklist Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>