force-app/main/default/objects/BOR_Master_Checklist__c/fields/BOR_Checklist_Status__c.field-meta.xml
<CustomField>
    <fullName>BOR_Checklist_Status__c</fullName>
    <label>BOR Checklist Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>