force-app/main/default/objects/BOR_Master_Checklist__c/fields/Checklist_Info_URL__c.field-meta.xml
<CustomField>
    <fullName>Checklist_Info_URL__c</fullName>
    <description>For Tax Res Functionality, keep track of external URL related to checklist</description>
    <label>Checklist Info URL</label>
    <type>Url</type>
</CustomField>