force-app/main/default/objects/BOR_Master_Checklist__c/fields/Coordinator_Info_Type__c.field-meta.xml
<CustomField>
    <fullName>Coordinator_Info_Type__c</fullName>
    <description>Type of info need from coordinator</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Coordinator Info Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>