force-app/main/default/objects/BOR_Master_Checklist__c/fields/Macro_Name__c.field-meta.xml
<CustomField>
    <fullName>Macro_Name__c</fullName>
    <description>For Tax Res Checklist</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Macro Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>