force-app/main/default/objects/BOR_Master_Checklist__c/fields/Non_TADA_Type__c.field-meta.xml
<CustomField>
    <fullName>Non_TADA_Type__c</fullName>
    <description>Benefit Transfer - Categorize Non-TADA checklist into a different category</description>
    <label>Non TADA Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Required for Plan/Policy Build</fullName>
            </value>
            <value>
                <fullName>Required for Enrollment Review</fullName>
            </value>
            <value>
                <fullName>Nice to Have (Order CAN push withOut)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>