force-app/main/default/objects/BOR_Master_Checklist__c/fields/Optional_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Optional_Checklist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Benefit Transfer - Define whether it is an option or not, used in Checklist module</description>
    <label>Optional Checklist</label>
    <type>Checkbox</type>
</CustomField>