force-app/main/default/objects/BOR_Master_Checklist__c/recordTypes/Benefits.recordType-meta.xml
<RecordType>
    <fullName>Benefits</fullName>
    <active>true</active>
    <description>Used for BOR transfers</description>
    <label>Benefits</label>
</RecordType>