force-app/main/default/objects/BOR_Master_Checklist__c/recordTypes/Tax_Res_Coordinator_Actions.recordType-meta.xml
<RecordType>
    <fullName>Tax_Res_Coordinator_Actions</fullName>
    <active>true</active>
    <label>Tax Res Coordinator Actions</label>
</RecordType>